[package]
name = "photo-date-exif-repair"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
colored = "2.0.0"
regex = "1.7.1"
thiserror = "1.0.38"
chrono = "0.4.23"
lazy_static = "1.4.0"
dateparser = "0.1.7"
kamadak-exif = "0.5.5"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
threadpool = "1.8.1"
